# fsspec-browser

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  LICENSE  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/fsspec_browser/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/src/: api.doctree  explanation.doctree  terminal.doctree  tutorial.doctree  web.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
_modules/: index.html
_modules/fsspec_browser/: browser.html  web.html
_sources/: index.md.txt
_sources/autoapi/fsspec_browser/: index.rst.txt
_sources/docs/src/: api.md.txt  explanation.md.txt  terminal.md.txt  web.md.txt
autoapi/fsspec_browser/: index.html
autoapi/test_all/: index.html
docs/src/: api.html  explanation.html  terminal.html  terminal.md  tutorial.html  tutorial.md  web.html  web.md
examples/: create_superstore_duckdb.py
fsspec_browser/: browser.py  web.py
fsspec_browser/tests/: test_all.py  test_browser.py  test_web.py
js/: Cargo.toml  build.mjs  package.json  playwright.config.js  pnpm-lock.yaml
js/src/css/: index.css
js/src/html/: index.html
js/src/ts/: index.ts
js/tests/: index.spec.js
js/tools/: bundle.mjs
rust/: Cargo.toml  Makefile
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/src/: lib.rs  terminal_browser.rs
