[package]
name = "fsspec_browser_py"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "fsspec_browser"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
fsspec_browser_core = { package = "fsspec_browser", path = "./rust", version = "*", features = ["browser"] }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[profile.test.junit]
path = "junit.xml"

[workspace]
members = [
    "js",
    "rust",
]
