[package]
name = "fsspec_browser_py"
version = "0.2.1"
edition = "2021"
publish = false

[lib]
name = "fsspec_browser"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
fsspec_browser_core = { package = "fsspec_browser", path = "./rust", version = "*", features = ["browser"] }
fsspec_rs = "0.1.2"
fsspec_rs_bridge = "0.1.2"
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods"] }
serde_json = "1"

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
