[build-system]
requires = [
    "hatchling",
    "hatch-js",
    "hatch-rs",
]
build-backend = "hatchling.build"

[project]
name = "fsspec-browser"
authors = [
    {name = "the fsspec-browser authors", email = "dev@1kbgz.com"},
]
description = "terminal and web browser for fsspec backends"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.2.0"
requires-python = ">=3.11"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fsspec",
]

[project.optional-dependencies]
database = [
    "fsspec-db[duckdb]",
    "pandas",
    "superstore",
]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "cibuildwheel",
    "codespell",
    "hatch-js",
    "hatch-rs",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
]

[project.scripts]
fsspec-browser = "fsspec_browser.browser:main"
fsspec-browser-web = "fsspec_browser.web:main"

[project.urls]
Repository = "https://github.com/1kbgz/fsspec-browser"
Homepage = "https://github.com/1kbgz/fsspec-browser"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = false 
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "fsspec_browser/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

# [[tool.bumpversion.files]]
# filename = "js/Cargo.toml"
# search = 'version = "{current_version}"'
# replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rust/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.cibuildwheel]
build = "cp311-*"
test-command = "pytest -vvv {project}/fsspec_browser/tests"
test-extras = "develop"

[tool.cibuildwheel.linux]
before-all = """
curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y
rustup target add aarch64-unknown-linux-gnu
rustup target add x86_64-unknown-linux-gnu
"""
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always", SKIP_HATCH_JS="1" }
skip = "*i686* *musllinux*"

[tool.cibuildwheel.macos]
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always", MACOS_DEPLOYMENT_TARGET=11.0}
archs = "arm64"

[tool.cibuildwheel.windows]
environment = {PATH="$UserProfile\\.cargo\bin;$PATH", CARGO_TERM_COLOR="always"}
skip = "*win32 *arm_64"

[tool.coverage.run]
branch = true
omit = [
    "fsspec_browser/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "fsspec_browser/*.dll",
    "fsspec_browser/*.dylib",
    "fsspec_browser/*.so",
    "fsspec_browser/extension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = [
    "fsspec_browser/extension/cdn/index.js",
]

[tool.hatch.build.hooks.hatch-rs]
verbose = true
abi3 = true
module = "fsspec_browser"
path = "."

[tool.hatch.build.targets.sdist]
packages = [
    "fsspec_browser",
    "js",
    "rust",
    "Cargo.toml",
    "Cargo.lock",
]
exclude = [
    "fsspec_browser/*.dll",
    "fsspec_browser/*.dylib",
    "fsspec_browser/*.so",
    "fsspec_browser/extension",
    "js/dist",
    "js/node_modules",
    "rust/Makefile",
    "target",
]

[tool.hatch.build.targets.wheel]
packages = [
    "fsspec_browser",
]
artifacts = [
    "fsspec_browser/extension/**/*",
]
exclude = [
    "js",
    "rust",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "fsspec_browser/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "fsspec_browser",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
title = "fsspec-browser"
root = "README.md"
pages = [
    "docs/src/tutorial.md",
    "docs/src/terminal.md",
    "docs/src/web.md",
    "docs/src/explanation.md",
    "docs/src/api.md",
]
use-autoapi = false
