[package]
name = "fsspec_browser"
version = "0.3.0"
authors = ["the fsspec-browser authors <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/fsspec-browser"
description = "terminal and web browser for fsspec backends"

[lib]
name = "fsspec_browser"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
arrow = { version = "54.3.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
fsspec_data = { version = "0.2.3", optional = true }
fsspec_rs = { version = "0.1.5", optional = true }
url = { version = "2", optional = true }
serde_json = { version = "1", optional = true }
ratatui = { version = "0.30.1", optional = true }
crossterm = { version = "0.29", optional = true }
humantime = { version = "2.3", optional = true }

[features]
browser = [
    "dep:arrow",
    "dep:crossterm",
    "dep:fsspec_data",
    "dep:fsspec_rs",
    "dep:humantime",
    "dep:ratatui",
    "dep:serde_json",
    "dep:url",
]

[[bin]]
name = "fsspec-browser"
path = "src/bin/fsspec-browser.rs"
required-features = ["browser"]
